# umrx-v3-py

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.yml  pyproject.toml  pytest.ini  setup.py
.github/workflows/: auto-assign.yml  python-lint-and-test.yml  release-and-publish-to-pypi.yml
coines_py_v3/examples/: bmi088_shuttle_board.py
coines_py_v3/mcu_board/: bst_protocol.py  usb_comm.py
coines_py_v3/shuttle_board/: bmi088.py  bmi088_commands.json
examples/: README.md  bmi088_shuttle_board.py  switch_app_dfu.py  switch_app_mtp.py
examples/bma400/: bma400_i2c_interrupt_streaming.py  bma400_i2c_polling_streaming.py  bma400_i2c_read_write.py  bma400_spi_interrupt_streaming.py  bma400_spi_polling_streaming.py  bma400_spi_read_write.py
examples/bma456/: bma456_i2c_interrupt_streaming.py  bma456_i2c_polling_streaming.py  bma456_i2c_read_write.py  bma456_spi_interrupt_streaming.py  bma456_spi_polling_streaming.py  bma456_spi_read_write.py
examples/bma530/: bma530_i2c_interrupt_streaming.py  bma530_i2c_polling_streaming.py  bma530_i2c_read_write.py  bma530_i2c_read_write_extended.py  bma530_spi_polling_streaming.py  bma530_spi_read_write.py  bma530_spi_read_write_extended.py
examples/bma580/: bma580_i2c_interrupt_streaming.py  bma580_i2c_polling_streaming.py  bma580_i2c_read_write.py  bma580_i2c_read_write_extended.py  bma580_spi_polling_streaming.py  bma580_spi_read_write.py  bma580_spi_read_write_extended.py
examples/bme280/: bme280_i2c_polling_streaming.py  bme280_i2c_read_write.py  bme280_spi_polling_streaming.py  bme280_spi_read_write.py
examples/bmi088/: bmi088_i2c_interrupt_streaming.py  bmi088_i2c_polling_streaming.py  bmi088_i2c_read_write.py  bmi088_spi_interrupt_streaming.py  bmi088_spi_polling_streaming.py  bmi088_spi_read_write.py
examples/bmi323/: bmi323_i2c_interrupt_streaming.py  bmi323_i2c_polling_streaming.py  bmi323_i2c_read_write.py  bmi323_spi_interrupt_streaming.py  bmi323_spi_polling_streaming.py
examples/bmm350/: bmm350_i2c_interrupt_streaming.py  bmm350_i2c_polling_streaming.py  bmm350_i2c_read_write.py
examples/bmp390/: bmi323_spi_read_write.py  bmp390_i2c_interrupt_streaming.py  bmp390_i2c_polling_streaming.py  bmp390_i2c_read_write.py  bmp390_spi_interrupt_streaming.py  bmp390_spi_polling_streaming.py  bmp390_spi_read_write.py
examples/bmp585/: bmp585_i2c_interrupt_streaming.py  bmp585_i2c_polling_streaming.py  bmp585_i2c_read_write.py  bmp585_spi_interrupt_streaming.py  bmp585_spi_polling_streaming.py  bmp585_spi_read_write.py
integration_tests/: conftest.py  test_app_board_v3_rev0.py  test_app_board_v3_rev1.py  test_bst_protocol.py  test_shuttle_bmi088.py  test_usb_comm.py
src/umrx_app_v3/mcu_board/: app_board_30.py  app_board_v3_rev0.py  app_board_v3_rev1.py  bst_app_board.py  bst_protocol.py  bst_protocol_constants.py  usb_comm.py
src/umrx_app_v3/mcu_board/comm/: comm.py  serial_comm.py  usb_comm.py
src/umrx_app_v3/mcu_board/commands/: app_switch.py  board_info.py  command.py  i2c.py  pin_config.py  set_vdd_vddio.py  spi.py  streaming.py  streaming_interrupt.py  streaming_polling.py  timer.py
src/umrx_app_v3/sensors/: bma400.py  bma456.py  bma530.py  bma580.py  bme280.py  bmi088.py  bmi323.py  bmm350.py  bmp390.py  bmp585.py
src/umrx_app_v3/shuttle_board/: bmi088.py  bmi088_commands.json  shuttle_base.py
src/umrx_app_v3/shuttle_board/bma400/: bma400_shuttle.py
src/umrx_app_v3/shuttle_board/bma456/: bma456_shuttle.py
src/umrx_app_v3/shuttle_board/bma456/config_files/: bma456_an.py  bma456_h.py  bma456_mm.py  bma456_tablet.py  bma456_w.py
src/umrx_app_v3/shuttle_board/bma530/: bma530_shuttle.py
src/umrx_app_v3/shuttle_board/bma580/: bma580_shuttle.py
src/umrx_app_v3/shuttle_board/bme280/: bme280_shuttle.py
src/umrx_app_v3/shuttle_board/bmi088/: accel_streaming_packet.py  bmi088_shuttle.py  gyro_streaming_packet.py
src/umrx_app_v3/shuttle_board/bmi323/: bmi323_shuttle.py
src/umrx_app_v3/shuttle_board/bmm350/: bmm350_shuttle.py
src/umrx_app_v3/shuttle_board/bmp390/: bmp390_shuttle.py
src/umrx_app_v3/shuttle_board/bmp585/: bmp585_shuttle.py
test/: conftest.py  test_app_board_30.py  test_app_board_v3_rev0.py  test_bst_protocol.py  test_serial_comm.py  test_shuttle_bmi088.py  test_usb_comm.py
tests/: __init__.py  conftest.py  test_app_board_v3_rev0.py  test_app_board_v3_rev1.py  test_bst_app_board.py  test_bst_protocol.py  test_serial_comm.py  test_usb_comm.py
tests/comm/: message.bytes  test_serial.py
tests/commands/: test_app_switch.py  test_board_info.py  test_i2c.py  test_pin_config.py  test_set_vdd_vddio.py  test_spi.py  test_streaming.py  test_streaming_interrupt.py  test_streaming_polling.py  test_timer.py
tests/sensors/: test_bma400.py  test_bma456.py  test_bma530.py  test_bma580.py  test_bme280.py  test_bmi088.py  test_bmi323.py  test_bmm350.py  test_bmp390.py  test_bmp585.py
