[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "umrx-app-v3"
version = "0.0.1"
description = "Python COINES firmware communication"
authors = [
  "Konstantin Selyunin <selyunin.k.v@gmail.com>",
]
readme = "README.md"
repository = "https://github.com/umrx-sw/umrx-v3-py"

[tool.coverage.report]
fail_under = 50
precision = 1
show_missing = true
skip_covered = true

[tool.coverage.run]
branch = true
command_line = "--module pytest"
data_file = "reports/.coverage"
source = ["src"]

[tool.coverage.xml]
output = "reports/coverage.xml"

[tool.mypy]
junit_xml = "reports/mypy.xml"
plugins = "pydantic.mypy"
strict = true
disallow_subclassing_any = false
disallow_untyped_decorators = false
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
warn_unreachable = true


[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pytest.ini_options]
addopts = "--color=yes --doctest-modules --exitfirst --failed-first --strict-config --strict-markers --typeguard-packages=umrx_app_v3 --verbosity=2 --junitxml=reports/pytest.xml --log-cli-level=DEBUG"
filterwarnings = [
  "error",
  "ignore::DeprecationWarning",
  "ignore::pytest.PytestUnraisableExceptionWarning",
]
testpaths = ["src", "tests"]
xfail_strict = true

[tool.pytest-watcher]
now = true

[tool.ruff]
fix = true
line-length = 120
lint.select = ["ALL"]
lint.ignore = [
  "ANN101",
  "ANN102",
  "ANN401",
  "ARG001",
  "COM812",
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
  "FIX002",
  "S101",
  "S603",
  "S607",
  "TD002",
  "TD003",
]
lint.unfixable = ["ERA001", "F841", "T201", "T203"]
src = ["integration_tests", "src", "tests"]
target-version = "py310"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.pycodestyle]
max-doc-length = 120

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
combine-as-imports = true
order-by-type = false
known-first-party = ["tests"]

[tool.poe.tasks]


[tool.poe.tasks.lint]
help = "Lint this package with pre-commit"

[[tool.poe.tasks.lint.sequence]]
cmd = "pre-commit run --all-files --color always"

[[tool.poe.tasks.lint.sequence]]
shell = "safety check --continue-on-error --full-report"

[tool.poe.tasks.test]
help = "Test this package"

[[tool.poe.tasks.test.sequence]]
cmd = "coverage run"

[[tool.poe.tasks.test.sequence]]
cmd = "coverage report"

[[tool.poe.tasks.test.sequence]]
cmd = "coverage xml"

[tool.poe.tasks.integration-test]
help = "Run the integration tests"
cmd = "pytest --forked --failed-first --log-cli-level=DEBUG integration_tests/test_bmi088.py"


